# diamond-edge

./: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  vercel.json
worker/: .gitignore  Dockerfile  fly.toml  pyproject.toml  requirements.txt
worker/app/: calibration_fit.py  features.py  main.py  rationale.py  team_map.py
worker/models/: README.md  backtest-harness.md  calibration-spec.md  inference-runtime.md  pick_candidate_schema.py  run_training.py  test_pipeline_smoke.py  test_shap_filter.py  test_worker_endpoint.py  training-report-v1.md
worker/models/backtest/: run_backtest_v3.py  run_roi_backtest.py
worker/models/backtest/reports/: backtest_b2_all_markets.json  backtest_b2_moneyline.json  backtest_b2_run_line.json  backtest_b2_totals.json  backtest_summary.json  backtest_summary_v2.json  backtest_v3_summary.json  backtest_v4_moneyline.json  (+1 more)
worker/models/moneyline/: feature-spec.md
worker/models/pipelines/: build_training_data.py  build_training_data_b2.py  drift_audit.py  enrich_schedule_sp_ids.py  feature_engineering.py  fetch_boxscores_2022_2023.py  fetch_remaining_boxscores.py  fix_starter_flags.py  load_historical_odds.py  load_historical_odds_v2.py  merge_season_parquets.py  pull_mlb_stats.py  pull_statcast.py  run_data_pull.py  run_full_pipeline.py  train_b2_delta.py  train_models.py  train_models_v2.py  train_moneyline_v3.py  train_moneyline_v4.py
worker/models/retrain/: README.md  monthly.py  promote.py  test_promote_gate.py
worker/models/run_line/: feature-spec.md
worker/models/totals/: feature-spec.md
(+502 files in other folders)
